--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cron": "^3.1.6",
     "dotenv": "latest",
     "express": "latest",
+    "express-rate-limit": "^8.0.1",
     "firebase": "latest",
     "helmet": "latest",
     "jsonwebtoken": "latest",
